fix image overflow a tag
made social div expand 100% on mobile

--- a/client/src/pages/Contact/Contact.scss
+++ b/client/src/pages/Contact/Contact.scss
@@ -131,6 +131,10 @@
           display: flex;
           justify-content: space-between;
           width: 60%;
+
+          @media only screen and (max-width: 768px) {
+            width: 100%;
+          }
         }
       }
 
